--- a/public/stylesheets/uphold.css
+++ b/public/stylesheets/uphold.css
@@ -57,6 +57,7 @@ td a.run {
 
 td a.running { background-image: url('../images/running.gif'); }
 td a.ok { background-image: url('../images/ok.png'); }
+td a.not_run { background-image: url('../images/not_run.png'); }
 td a.ok_no_test { background-image: url('../images/ok_no_test.png'); }
 td a.bad { background-image: url('../images/bad.png'); }
 td a.bad_tests { background-image: url('../images/bad_tests.png'); }
