--- a/views/index.erb
+++ b/views/index.erb
@@ -4,16 +4,22 @@
     <th>Outcomes</th>
   </thead>
   <tbody>
-    <% @configs.sort_by { |c| c[:name] }.each do |c| %>
+    <% @data.sort_by { |c| c[:config_name] }.each do |c| %>
     <tr>
-      <td class="config_name"><%= c[:name] %> <a class="run" href="run/<%= c[:file] %>"></a></td>
+      <td class="config_name"><%= c[:config_name] %> <a class="run" href="run/<%= c[:config_file] %>"></a></td>
       <td>
-        <% unless @logs[c[:file]].nil? %>
+        <% unless c[:backups].nil? %>
         <ul>
-          <% @logs[c[:file]].each do |log| %>
+          <% c[:backups].sort_by { |b| b[:date] }.reverse!.each do |backup| %>
+            <% unless backup[:log] == nil %>
             <li>
-              <a title="<%= log[:state] %>" class="<%= log[:state] %>" href="logs/<%= log[:filename] %>"></a> <%= epoch_to_datetime(log[:epoch]) %>
+              <a title="<%= backup[:log][:state] %>" class="<%= backup[:log][:state] %>" href="logs/<%= backup[:log][:filename] %>"></a> <%= epoch_to_datetime(backup[:log][:epoch]) %>
             </li>
+            <% else %>
+            <li>
+              <a title="not_run" class="not_run" href=""></a> <%= dateTime_to_UI_Format(backup[:date]) %>
+            </li>
+            <% end %>
           <% end %>
         </ul>
         <% else %>
